src/expr/src/scalar/snapshots/mz_expr__scalar__func__mz_render_typmod.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(\n    output_type = \"String\",\n    sqlname = \"mz_render_typmod\",\n    propagates_nulls = true,\n    introduces_nulls = false\n)]\nfn mz_render_typmod<'a>(\n    oid: Datum<'a>,\n    typmod: Datum<'a>,\n    temp_storage: &'a RowArena,\n) -> Result<Datum<'a>, EvalError> {\n    let oid = oid.unwrap_uint32();\n    let typmod = typmod.unwrap_int32();\n    let s = match Type::from_oid_and_typmod(oid, typmod) {\n        Ok(typ) => typ.constraint().display_or(\"\").to_string(),\n        Err(_) if typmod >= 0 => format!(\"({typmod})\"),\n        Err(_) => \"\".into(),\n    };\n    Ok(Datum::String(temp_storage.push_string(s)))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct MzRenderTypmod;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for MzRenderTypmod {
    type Input1 = Datum<'a>;
    type Input2 = Datum<'a>;
    type Output = Result<Datum<'a>, EvalError>;
    fn call(
        &self,
        oid: Self::Input1,
        typmod: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        {
            let oid = oid.unwrap_uint32();
            let typmod = typmod.unwrap_int32();
            let s = match Type::from_oid_and_typmod(oid, typmod) {
                Ok(typ) => typ.constraint().display_or("").to_string(),
                Err(_) if typmod >= 0 => format!("({typmod})"),
                Err(_) => "".into(),
            };
            Ok(Datum::String(temp_storage.push_string(s)))
        }
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::ColumnType,
        input_type_b: mz_repr::ColumnType,
    ) -> mz_repr::ColumnType {
        use mz_repr::AsColumnType;
        let output = <String>::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn introduces_nulls(&self) -> bool {
        false
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for MzRenderTypmod {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("mz_render_typmod")
    }
}
